# Vibe_Watch

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: fetch_titles.py  index_titles.py
tests/: conftest.py  test_embed_with_cache.py  test_embedding_cache.py  test_models.py  test_retrieval.py  test_retrieval_integration.py  test_search.py  test_tmdb.py  test_vector_store.py
vibewatch/: __init__.py  config.py  embedding_cache.py  embeddings.py  models.py  retrieval.py  tmdb.py  vector_store.py
